--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,8 @@
 				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"ms-python.black-formatter",
-				"ClemensPeters.format-json"
+				"ClemensPeters.format-json",
+				"MarsCode.marscode-extension"
 			]
 		}
 	},
