--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,30 +1,33 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.234.0/containers/python-3
 {
 	"name": "tools",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:0-3.11",
-	// Set *default* container specific settings.json values on container create.
+	"dockerComposeFile": "../docker-compose.yml",
+	"service": "streamlit",
+	"workspaceFolder": "/workspaces/tools",
+	// 自定义配置
 	"customizations": {
-		// Configure properties specific to VS Code.
 		"vscode": {
-			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"ms-python.python",
 				"ms-python.vscode-pylance",
 				"ms-python.black-formatter",
-				"ClemensPeters.format-json",
 				"MarsCode.marscode-extension"
-			]
+			],
+			"settings": {
+				"python.defaultInterpreterPath": "/usr/local/bin/python",
+				"python.linting.enabled": true,
+				"python.formatting.provider": "black",
+				"editor.formatOnSave": true
+			}
 		}
 	},
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// 端口转发配置
 	"forwardPorts": [
-		2345
+		8888
 	],
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// 用于devcontainer中，pip3 升级、设置清华源、安装requirements.txt中的依赖包
-	"postCreateCommand": "pip3 install --upgrade pip && pip3 config set global.index-url https:\/\/pypi.tuna.tsinghua.edu.cn\/simple && pip3 install --user -r requirements.txt",
-	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	// 容器创建后执行的命令
+	"postCreateCommand": "pip3 install --upgrade pip && pip3 config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple && pip3 install -r requirements.txt",
+	// 远程用户配置
+	"remoteUser": "vscode",
+	// 开发容器配置
+	"shutdownAction": "stopCompose"
 }
