--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,23 @@
 version: "3.7"
 services:
   streamlit:
-    build: ./
+    build: 
+      context: .
+      dockerfile: Dockerfile
     container_name: tools
     ports:
       - "8888:8888"
     working_dir: "/workspaces/tools"
     volumes:
-      - /Volumes/myDriver/Github/tools:/workspaces/tools
-    command: "streamlit run auth.py --server.port 8888"
+      - .:/workspaces/tools
+      # 修改为宿主机路径绑定（替换原 external_storage 卷）
+      - /Volumes/myDriver/Docker/Streamlit:/external_storage  # 宿主机路径:容器内路径
+    environment:
+      - PYTHONPATH=/workspaces/tools
+      - STREAMLIT_SERVER_PORT=8888
+      - STREAMLIT_SERVER_ADDRESS=0.0.0.0
+      - EXTERNAL_STORAGE_PATH=/external_storage
+    command: "streamlit run auth.py --server.port 8888 --server.address 0.0.0.0"
+    stdin_open: true
+    tty: true
+    restart: unless-stopped
